--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ div {
     border-bottom: 4px solid white;
 }
 input[type=number] {
+    outline: none;
     width: 100%;
     height: 100%;
     background: black;
